# RoboCastingTools

./: .gitignore  MANIFEST.in  README.md  draft.ipynb  gitignore  output.pkcl  setup.cfg  timestamps.csv
RoboCasterTools/: rosbag_utils.py
RoboCasterTools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
RoboCastingTools/: pybullet_utils.py  rosbag_utils.py
RoboCastingTools/scripts/: bag_to_euroc.py  bag_to_imus.py  bag_to_tfs.py  bag_to_video.py  image_resizer.py
RoboTools/: imu_utils.py  rosbag_utils.py  time_sync_utils.py  unitree_utils.py
RoboTools/scripts/: bag_tf_to_pckl.py  bag_to_euroc.py  bag_to_images.py  bag_to_video.py  labelme_seg_label_resizer.py  labelme_split_json_resizer.py
notebooks/: apriltag_bundle_calibration.ipynb  draft.ipynb  unitree_highstate.ipynb
scripts/: bag_to_images.py
